# keriguard-plugin

./: .gitignore  README.md  pyproject.toml
plugins/admin/: pyproject.toml
plugins/admin/src/keriguard_admin/: plugin.py  settings.py  setup.py
plugins/admin/src/keriguard_admin/connections/: issue.py
plugins/admin/src/keriguard_admin/core/: essring.py  kering.py  remoting.py
plugins/admin/src/keriguard_admin/db/: basing.py
plugins/admin/src/keriguard_admin/machines/: add.py  detail.py  issue.py  list.py  view.py
plugins/client/: pyproject.toml
plugins/client/src/keriguard_client/: plugin.py
plugins/user/: pyproject.toml
plugins/user/src/keriguard_user/: plugin.py  settings.py
plugins/user/src/keriguard_user/connections/: detail.py  import_.py  list.py
plugins/user/src/keriguard_user/core/: applying.py  essring.py  fetching.py  helper_check.py  helper_launch.py
plugins/user/src/keriguard_user/db/: basing.py
plugins/user/src/keriguard_user/machines/: detail.py  import_.py  list.py
plugins/user/src/keriguard_user/setup/: page.py
scripts/: dev_env.py
src/KERIGuard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/keriguard/: plugin.py
src/keriguard/core/: remoting.py
src/keriguard/db/: basing.py
src/keriguard/machines/: list.py
src/keriguard_plugin/: plugin.py  settings.py
src/keriguard_plugin/connections/: detail.py  list.py
src/keriguard_plugin/core/: kering.py  remoting.py
src/keriguard_plugin/db/: basing.py
src/keriguard_plugin/machines/: detail.py  issue.py  list.py
