[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keriguard-admin"
version = "0.0.1"
description = "KERIGuard admin plugin for Locksmith application."
readme = "README.md"
requires-python = ">=3.12.9"
license = { text = "MIT" }

authors = [
    { name = "Ari Argoud", email = "ari@healthkeri.com" },
    { name = "Phil Feairheller", email = "phil@healthkeri.com" },
]

keywords = ["healthKERI", "cryptography", "KERI", "ACDC"]

classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "keriguard @git+https://git@github.com/healthKERI/keriguard",
]

[project.entry-points."locksmith.plugins"]
keriguard_admin = "keriguard_admin.plugin:KERIGuardAdminPlugin"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
pythonpath = ["src", "."]